# torrent-info-gen-tauri

./: package.json  pnpm-lock.yaml  vite.config.ts
.github/workflows/: publish.yml
src/: App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
