[package]
name = "torrent-info-gen-tauri"
version = "0.2.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2.2.5", features = [] }
tauri-plugin-shell = "2.2.0"
tauri-plugin-updater = "2.3.1"

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }
